# APEX

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  apex_data.db-shm  apex_data.db-wal  build-prompt.md  pnpm-lock.yaml  pnpm-workspace.yaml
apex-adapters/: Cargo.toml
apex-adapters/src/: lib.rs
apex-adapters/src/execution/: angel_one_execution.rs  groww_execution.rs  mod.rs  paper_trading.rs  robinhood_execution.rs  zerodha_execution.rs
apex-adapters/src/market_data/: angel_one_market_data.rs  groww_market_data.rs  historical_downloader.rs  mod.rs  robinhood_market_data.rs  yahoo_finance.rs  zerodha_kite.rs
apex-adapters/src/storage/: duckdb_analytics.rs  mod.rs  redis_state.rs  sqlite_storage.rs  timescale.rs
apex-core/: Cargo.toml
apex-core/src/: lib.rs
apex-core/src/application/: alert_engine.rs  backtest_engine.rs  circuit_breaker.rs  exchange_calendar.rs  graph_engine.rs  indicators.rs  market_data_aggregator.rs  ml_experiment.rs  mod.rs  news_engine.rs  order_trade_manager.rs  risk_engine.rs  scanner.rs  sentiment.rs  strategy_orchestrator.rs
apex-core/src/bus/: message_bus.rs  mod.rs
apex-core/src/domain/: events.rs  models.rs
apex-core/src/ports/: execution.rs  market_data.rs  mod.rs  news.rs  storage.rs
apex-python/: pyproject.toml
apex-python/apex_sdk/: __init__.py  strategy.py  types.py
apex-python/ml/: __init__.py  trainer.py
apex-python/runtime/: __init__.py  sandbox.py  sidecar.py  strategy_runner.py
apex-python/tests/: test_sandbox.py  test_strategy.py
apex-tauri/: Cargo.toml  tauri.conf.json
apex-tauri/capabilities/: main.json
apex-tauri/src/: dto.rs  main.rs  state.rs  tracing_setup.rs  validation.rs
apex-tauri/src/commands/: alerts.rs  data.rs  health.rs  market.rs  ml.rs  mod.rs  orders.rs  risk.rs
apex-ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
apex-ui/src/: App.tsx  index.css
apex-ui/src/components/charts/: CandleChart.tsx  OrderBookHeatmap.tsx  VectorGraph.tsx
apex-ui/src/components/common/: PnlValue.tsx
apex-ui/src/components/ml/: MLWorkbench.tsx
apex-ui/src/components/monitor/: HealthMonitor.tsx
apex-ui/src/components/strategy/: StrategyIDE.tsx
apex-ui/src/components/trading/: OrderEntry.tsx  PositionsPanel.tsx  Watchlist.tsx
apex-ui/src/components/workspace/: CommandBar.tsx  StatusBar.tsx  Workspace.tsx
apex-ui/src/hooks/: useTauriEvents.ts
apex-ui/src/lib/: format.ts  tauri.ts  tauri.ts.bak  types.ts  useDataSync.ts
apex-ui/src/stores/: healthStore.ts  marketStore.ts  mlStore.ts  orderStore.ts  riskStore.ts  workspaceStore.ts
apex-ui/src/theme/: tokens.css
apex-ui/tests/: README.md  account-switching.spec.ts  command-bar.spec.ts  example.spec.ts  health-monitor.spec.ts  ml-pipeline.spec.ts  ml-workbench.spec.ts  order-placement.spec.ts  trade-automation.spec.ts
config/: apex.toml
docs/: APEX-trading-platform.md  adapter-guide.md  ml-guide.md  strategy-api.md
migrations/: 001_core_tables.sql  002_application_tables.sql  003_timescaledb_extensions.sql
scripts/: build-all.sh  build.sh  dev.sh  generate_icons.sh  setup_db.sh
