[package]
name = "apex-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-core = { path = "../apex-core" }
apex-adapters = { path = "../apex-adapters" }
tauri = { version = "2", features = ["devtools"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
